--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.8.7",
     "nodemailer": "^6.4.4",
     "nodemon": "^2.0.2",
+    "require-dir": "^1.2.0",
     "sequelize": "^5.21.3"
   },
   "scripts": {
