--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   },
   "scripts": {
     "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
