--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "1",
+  "version": "1.0.0",
   "description": "Api para o sistema jabuti.",
   "main": "index.js",
   "repository": "https://github.com/AugeCorp/backend_jabuti.git",
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "nodemailer": "^6.4.4",
     "nodemon": "^2.0.2",
