--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sequelize": "^5.21.3"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js", 
+    "start": "node src/index.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
