--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.8.7",
     "nodemailer": "^6.4.4",
     "nodemon": "^2.0.2",
@@ -20,7 +21,7 @@
     "sequelize": "^5.21.3"
   },
   "scripts": {
-    "dev": "nodemon src/index.js", 
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "devDependencies": {
